unpackaged/main/default/objects/inov8__PMT_Error_Log__c/inov8__PMT_Error_Log__c.object-meta.xml
<CustomObject>
    <description>Used to capture errors occurred operations.</description>
    <label>PMT Error Log</label>
    <nameField>
        <displayFormat>ER-{000000}</displayFormat>
        <label>PMT Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PMT Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>