unpackaged/main/default/objects/inov8__PMT_Error_Log__c/fields/inov8__Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>inov8__Apex_Class__c</fullName>
    <description>Apex class whose execution failed</description>
    <label>Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>