unpackaged/main/default/objects/inov8__PMT_Error_Log__c/fields/inov8__Method_Name__c.field-meta.xml
<CustomField>
    <fullName>inov8__Method_Name__c</fullName>
    <description>Apex method which get failed</description>
    <label>Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>