unpackaged/main/default/objects/inov8__PMT_Error_Log__c/fields/inov8__Salesforce_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>inov8__Salesforce_Record_Id__c</fullName>
    <description>Salesforce record Id for which error occurred</description>
    <label>Salesforce Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>